# backend_project

./: .env  .gitignore  README.md  debug.py  frontend.py  pyproject.toml  test.db
app/: app.py  db.py  images.py  schemas.py  users.py
archive/: README.md
archive/app/: app.py
archive/no_user/: .gitignore
archive/no_user/app/: images.py
